Bug 144347 - EDITING Deleting table containing a tracked change and text before/after; does not delete table when accepting the changes
Summary: EDITING Deleting table containing a tracked change and text before/after; doe...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.3.0
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2021-09-07 06:21 UTC by NISZ LibreOffice Team
Modified: 2021-09-27 13:08 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer (17.67 KB, application/vnd.oasis.opendocument.text)
2021-09-07 06:21 UTC, NISZ LibreOffice Team
Details
Screenshot of the original document in Writer (87.89 KB, image/png)
2021-09-07 06:21 UTC, NISZ LibreOffice Team
Details
Screenshot of the document after deleting the tables with some text before/after them (93.48 KB, image/png)
2021-09-07 06:22 UTC, NISZ LibreOffice Team
Details
Screenshot of the problem in Writer after accepting the deletions (78.13 KB, image/png)
2021-09-07 06:22 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-09-07 06:21:17 UTC
Created attachment 174844 [details]
Example file from Writer

This is a followup to bug 144058
If there is a table containing a tracked change and it is deleted in one go with text before/after it, accepting the changes causes the empty table to stay behind.

Steps to reproduce:
    1. Open attached document, it contains a table with a tracked deletion and one without any
    2. Highlight some text before the first table until after the table, press Delete
    3. Highlight some text before the second table until after the table, press Delete
    4. Accept all tracked changes

Actual results:
The first table remains.

Expected results:
The first table should be deleted as well, like the second is after the fix of bug 144058

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: 4cd3ce9848aa039b8d443a1257d1298231680b01
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-09-07 06:21:39 UTC
Created attachment 174845 [details]
Screenshot of the original document in Writer
Comment 2 NISZ LibreOffice Team 2021-09-07 06:22:00 UTC
Created attachment 174846 [details]
Screenshot of the document after deleting the tables with some text before/after them
Comment 3 NISZ LibreOffice Team 2021-09-07 06:22:17 UTC
Created attachment 174847 [details]
Screenshot of the problem in Writer after accepting the deletions
Comment 4 Commit Notification 2021-09-21 12:37:18 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/9994120c8d0fe8c5a029390ad7411b99c18ff5c9

tdf#144347 sw: fix tracked deletion of table with tracked content

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Timur 2021-09-27 13:08:18 UTC
Very nice to see this Inherited bug fixed. Thanks.