tdf#144347 sw: fix tracked deletion of table with tracked content

When a table contained tracked content already, its tracked
deletion (or cut) didn't work correctly, if the deletion
contained also the text before or after the table: accepting
the deletion left an empty table in the text, also Hide Changes
showed an empty table before that in the place of the deleted
text.

Follow-up of commit f481c2c8e74bded11fac754e493560391229dbcd
"df#144057 sw track changes: hide deleted table rows".

Change-Id: If3294fe0316df7c065e7ff63290c1723386ec7ba
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/122382
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/123994
Tested-by: Tünde Tóth <toth.tunde@nisz.hu>
Reviewed-by: Tünde Tóth <toth.tunde@nisz.hu>